1.20
    - Fix some stuff with recent DBIx::Class (arcanez)

1.19
	- Merge releases

1.16 (NUFFIN)
    - Updated to support change in DBIC object hierarchy

1.18
    - Fix set subquery building. Bad use of parenthesis.
    - Includes an actual test for the set query.

1.17
    - Small fix in release process

1.16 (DRUOSO)
    - Adds support for Set GIN queries

1.15
    - Constructing a KiokuDB directory handle is no longer mandatory, you can
      get it from the DBIC schema (domm, nothingmuch)

1.14
    - documentation fixes

1.13
    - fix ordered loading of DBIC Core component in example code
    - FOR UPDATE added to SELECT queries on MySQL, PG and Oracle
    - compound operations now create a txn guard by default

1.12
    - Fix FLORA's botched upload ;-) (typo in dist.ini)

1.11
    - Support for DBIx::Class integration (KiokuDB objects and DBIC rows can
      point to each other, DBIC resultsets can be serialized in KiokuDB)
    - All SQL operations that use placeholders now support limiting of the
      number of placeholders, splitting the operation into batches (this is
      enabled by default for SQLite which limits SQL statements to 999
      placeholders) (Jason May)
    - DBIx::Class::Optional::Dependencies now used in Makefile.PL to avoid
      problems with 'create => 1'

1.10
    - NOTE: this was supposed to be 0.10... oops
    - Added mysql_strict attribute, true by default, causes SQL's strict mode
      to be set
    - Now specifies 'longblob' instead of 'blob' as the type for the 'data'
      column when deploying to MySQL because the "large" in blob apparently
      means 64k and MySQL was truncating it by default
    - Added more bitter comments about MySQL to the documentation
    - Make the table_info fix from 0.09 only apply to SQLite

0.09
    - Fix double deployment with recent versions of DBD::SQLite
    - Pod fixes

0.08
    - Fix GIN key update (FIXME no coverage in KiokuDB test suite yet)
    - uses done_testing in test suite

0.07